Corrected vertical alignment of landing content

--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,18 @@ header {
   background: #ffffff;
   color: #2c3e50;
   height: 100vh;
+  position: relative;
 }
 
 .landing {
-  padding-top: 8%;
+  position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 30%;
+    margin: auto;
 }
 
 .intro-text {
